@@ -356,6 +356,8 @@ MW_GO_TO_DUPLICATE_HEADER=Duplicate segments: {0}
 # {0,number,#} = segment number, with thousands separator suppressed
 MW_GO_TO_DUPLICATE_ITEM=Segment {0,number,#}
 
+MW_MORE_SUBMENU=More
+
 # {0} = total nr of segments in project
 MW_SEGMENT_NUMBER_ERROR=You must enter a number between 1 and {0}.
 
