@@ -17,6 +17,9 @@
 
   - Panel header title was white under Windows 7 with a classic theme
 
+  - Too many duplicate segments in the popup menu
+  https://sourceforge.net/p/omegat/bugs/744/
+
   Localisation updates:
 
   - Dutch localisation updated to 3.4 (Documentation, readme)
